--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
   <!-- Fondo -->
   <div class="background"></div>
 
-  <!-- Lienzo del efecto -->
+  <!-- Canvas del efecto -->
   <canvas id="heatEffect"></canvas>
 
-  <!-- Contenido encima -->
+  <!-- Contenido -->
   <div class="content">
     <h1>Bienvenido al Desierto</h1>
     <p>Siente el calor de la arena y la magia de las pirámides.</p>
