--- a/index.html
+++ b/index.html
@@ -3,22 +3,93 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Página con Efecto de Calor</title>
+  <title>Portafolio | Keta Dev</title>
+  <meta name="description" content="Portafolio personal de Keta: proyectos, sitios web y diseño digital." />
   <link rel="stylesheet" href="styles.css" />
+  <link rel="icon" href="favicon.png" type="image/x-icon" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"/>
 </head>
 <body>
-  <!-- Fondo -->
-  <div class="background"></div>
 
-  <!-- Canvas del efecto -->
-  <canvas id="heatEffect"></canvas>
+  <!-- =================== HERO =================== -->
+  <header class="hero">
+    <div class="overlay"></div>
+    <div class="hero-content">
+      <h1>Keta Dev</h1>
+      <p>Diseñador y desarrollador web — construyendo experiencias únicas en la web.</p>
+      <a href="#proyectos" class="btn">Ver mis proyectos</a>
+    </div>
+  </header>
 
-  <!-- Contenido -->
-  <div class="content">
-    <h1>Bienvenido al Desierto</h1>
-    <p>Siente el calor de la arena y la magia de las pirámides.</p>
-  </div>
+  <!-- =================== SECCIÓN INFORMACIÓN =================== -->
+  <section class="info" id="info">
+    <h2>¿Por qué es importante una página web para mi negocio?</h2>
+    <div class="info-grid">
+      <div class="card">
+        <i class="fa-solid fa-globe"></i>
+        <h3>Presencia 24/7</h3>
+        <p>Tu negocio nunca duerme: una página web permite que te encuentren a cualquier hora del día.</p>
+      </div>
 
-  <script src="script.js"></script>
+      <div class="card">
+        <i class="fa-solid fa-bullhorn"></i>
+        <h3>Promoción y marketing</h3>
+        <p>Una web bien diseñada te permite destacar tus productos y conectar con tus clientes potenciales.</p>
+      </div>
+
+      <div class="card">
+        <i class="fa-solid fa-handshake"></i>
+        <h3>Confianza y profesionalismo</h3>
+        <p>Un sitio web transmite seriedad y mejora la percepción de tu marca ante nuevos clientes.</p>
+      </div>
+
+      <div class="card">
+        <i class="fa-solid fa-chart-line"></i>
+        <h3>Más ventas y alcance</h3>
+        <p>Con estrategias digitales adecuadas, una web puede convertirse en tu mejor vendedor.</p>
+      </div>
+    </div>
+  </section>
+
+  <!-- =================== SECCIÓN PROYECTOS =================== -->
+  <section class="proyectos" id="proyectos">
+    <h2>Algunos de mis trabajos</h2>
+    <div class="projects-grid">
+      <div class="project">
+        <img src="img/altar.png" alt="Altar de Adoración">
+        <div class="project-info">
+          <h3>Altar de Adoración</h3>
+          <a href="https://tusitio.com/altar" target="_blank">Ver sitio</a>
+        </div>
+      </div>
+
+      <div class="project">
+        <img src="img/zihua.png" alt="Zihuatanejo Sandboarding">
+        <div class="project-info">
+          <h3>Zihuatanejo Sandboarding</h3>
+          <a href="https://tusitio.com/sandboarding" target="_blank">Ver sitio</a>
+        </div>
+      </div>
+
+      <div class="project">
+        <img src="img/imagina.png" alt="Imagina y Playerea">
+        <div class="project-info">
+          <h3>Imagina y Playerea</h3>
+          <a href="https://tusitio.com/imagina" target="_blank">Ver sitio</a>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- =================== FOOTER =================== -->
+  <footer class="footer">
+    <p>© 2025 Keta Dev — Todos los derechos reservados.</p>
+    <div class="socials">
+      <a href="#"><i class="fa-brands fa-instagram"></i></a>
+      <a href="#"><i class="fa-brands fa-facebook"></i></a>
+      <a href="#"><i class="fa-brands fa-github"></i></a>
+    </div>
+  </footer>
+
 </body>
 </html>
