--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <header class="hero">
     <div class="overlay"></div>
     <div class="hero-content">
-      <h1>Keta Dev</h1>
+      <h1>Cristopher Dev</h1>
       <p>Diseñador y desarrollador web — construyendo experiencias únicas en la web.</p>
       <a href="#proyectos" class="btn">Ver mis proyectos</a>
     </div>
@@ -59,23 +59,7 @@
         <img src="img/altar.png" alt="Altar de Adoración">
         <div class="project-info">
           <h3>Altar de Adoración</h3>
-          <a href="https://tusitio.com/altar" target="_blank">Ver sitio</a>
-        </div>
-      </div>
-
-      <div class="project">
-        <img src="img/zihua.png" alt="Zihuatanejo Sandboarding">
-        <div class="project-info">
-          <h3>Zihuatanejo Sandboarding</h3>
-          <a href="https://tusitio.com/sandboarding" target="_blank">Ver sitio</a>
-        </div>
-      </div>
-
-      <div class="project">
-        <img src="img/imagina.png" alt="Imagina y Playerea">
-        <div class="project-info">
-          <h3>Imagina y Playerea</h3>
-          <a href="https://tusitio.com/imagina" target="_blank">Ver sitio</a>
+          <a href="https://altardeadoracion.sbs/" target="_blank">Ver sitio</a>
         </div>
       </div>
     </div>
