--- a/index.html
+++ b/index.html
@@ -52,31 +52,23 @@
   </section>
 
   <!-- =================== SECCIÓN PROYECTOS =================== -->
-<section class="proyectos" id="proyectos">
-  <h2>Algunos de mis trabajos</h2>
-  <div class="projects-grid">
-
-    <!-- Proyecto con video -->
-    <div class="project">
-      <video class="preview"
-             playsinline
-             muted
-             loop
-             preload="metadata"
-             poster="img/altarposter.jpg">
-        <source data-src="videos/altar.mp4" type="video/mp4" />
-      </video>
-      <div class="project-info">
-        <h3>Altar de Adoración</h3>
-        <a href="https://altardeadoracion.sbs/" target="_blank">Ver sitio</a>
-      </div>
-    </div>
-
-    <!-- Duplica el bloque .project para más trabajos cambiando poster y data-src -->
-    <!-- ... -->
-
+<div class="project">
+  <div class="video-wrapper">
+    <video class="preview"
+           playsinline
+           muted
+           loop
+           preload="metadata"
+           poster="img/altar-poster.jpg">
+      <source data-src="videos/altar.mp4" type="video/mp4" />
+    </video>
   </div>
-</section>
+  <div class="project-info">
+    <h3>Altar de Adoración</h3>
+    <a href="https://altardeadoracion.sbs/" target="_blank">Ver sitio</a>
+  </div>
+</div>
+
 
   <!-- =================== FOOTER =================== -->
   <footer class="footer">
