--- a/index.html
+++ b/index.html
@@ -52,15 +52,15 @@
   </section>
 
   <!-- =================== SECCIÓN PROYECTOS =================== -->
+<section class="proyectos" id="proyectos">
+  <h2>Algunos de mis trabajos</h2>
+  <div class="projects-grid">
+
+    <!-- Proyecto con video -->
 <div class="project">
   <div class="video-wrapper">
-    <video class="preview"
-           playsinline
-           muted
-           loop
-           preload="metadata"
-           poster="img/altar-poster.jpg">
-      <source data-src="videos/altar.mp4" type="video/mp4" />
+    <video class="preview" playsinline muted loop preload="metadata" poster="img/altar-poster.jpg">
+      <source data-src="videos/altar.mp4" type="video/mp4">
     </video>
   </div>
   <div class="project-info">
@@ -69,6 +69,11 @@
   </div>
 </div>
 
+    <!-- Duplica el bloque .project para más trabajos cambiando poster y data-src -->
+    <!-- ... -->
+
+  </div>
+</section>
 
   <!-- =================== FOOTER =================== -->
   <footer class="footer">
