--- a/index.html
+++ b/index.html
@@ -64,9 +64,12 @@
     </video>
   </div>
   <div class="project-info">
-    <h3>Altar de Adoración</h3>
-    <a href="https://altardeadoracion.sbs/" target="_blank">Ver sitio</a>
-  </div>
+  <h3>
+    <img src="img/adalogo.png" alt="Logo Altar de Adoración" class="project-logo">
+    Altar de Adoración
+  </h3>
+  <a href="https://altardeadoracion.sbs/" target="_blank">Ver sitio</a>
+ </div>
 </div>
 
     <!-- Duplica el bloque .project para más trabajos cambiando poster y data-src -->
