--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <p class="hero-line">
   Diseño y desarrollo WEB — Haz que tu
   <span class="rotator"><span class="word">proyecto</span></span>
-  se impulse , ¡Hagamoslo juntos!.
+  se impulse
 </p>
 
 <p class="hero-sub">
