aver como se ve

--- a/index.html
+++ b/index.html
@@ -17,14 +17,11 @@
     <div class="hero-content">
       <h1>Cristopher CO</h1>
 <p class="hero-line">
-  Diseño y desarrollo WEB — Haz que tu
-  <span class="rotator"><span class="word">proyecto</span></span>
-  se impulse
+  Diseño y desarrollo WEB — Haz que tu&nbsp;<span class="rotator"><span class="word">proyecto</span></span>&nbsp;se impulse
 </p>
 
 <p class="hero-sub">
-  Muéstrale y expone al mundo 
-  <span class="rotator2"><span class="word">tus ideas</span></span>
+  Muéstrale y expone al mundo&nbsp;<span class="rotator2"><span class="word">tus ideas</span></span>
 </p>
       <a href="#proyectos" class="btn">Ver mis proyectos</a>
     </div>
