--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Portafolio | Keta Dev</title>
+  <title>Cristopher C.O | CV Dev</title>
   <meta name="description" content="Portafolio personal de Keta: proyectos, sitios web y diseño digital." />
   <link rel="stylesheet" href="styles.css" />
   <link rel="icon" href="favicon.png" type="image/x-icon" />
@@ -84,13 +84,44 @@
   </div>
 </section>
 
+<!-- =================== COSTOS – TEXTO =================== -->
+<section class="costos-nota" id="costos">
+  <h2>Costos</h2>
+  <p class="lead">
+    La cotización varía según el proyecto y su complejidad: si es una web <strong>estática</strong> o <strong>dinámica</strong>,
+    número de secciones, diseño a medida, <em>responsive</em>, optimización de rendimiento, SEO básico, formularios,
+    integraciones (WhatsApp, redes, pasarelas, mapas, analítica), panel de administración, y si requiere contenido o branding.
+  </p>
+
+  <p class="price-line">
+    <strong>Desde <span class="mxn">$1,800 MXN</span></strong>
+    <span class="usd">(~$100 USD aprox., estimado a 18 MXN/USD)</span>
+  </p>
+
+  <!-- Línea decorativa de dominio -->
+  <div class="domain-line" aria-live="polite">
+    <span class="domain-left">Tu sitio con el dominio que prefieras:</span>
+    <span class="domain-demo"><span class="dname">miproyecto</span><span class="dtld">.com</span></span>
+    <span class="domain-badge">(Primer año gratuito)</span>
+  </div>
+</section>
+
+<!-- =================== TIEMPOS DE ENTREGA =================== -->
+<section class="tiempos-simple" id="tiempos">
+  <h2>Tiempos de entrega</h2>
+  <p>
+    Entrega estimada entre <strong>14</strong> y <strong>28 días</strong> en promedio, dependiendo del alcance,
+    cantidad de vistas/secciones, integraciones y velocidad de revisión/aprobaciones.
+  </p>
+</section>
+
+
   <!-- =================== FOOTER =================== -->
   <footer class="footer">
-    <p>© 2025 Keta Dev — Todos los derechos reservados.</p>
+    <p>Contacto</p>
     <div class="socials">
-      <a href="#"><i class="fa-brands fa-instagram"></i></a>
-      <a href="#"><i class="fa-brands fa-facebook"></i></a>
-      <a href="#"><i class="fa-brands fa-github"></i></a>
+      <a href="https://www.instagram.com/eutxnsy/"><i class="fa-brands fa-instagram"></i></a>
+      <a href="https://api.whatsapp.com/send?phone=5217555573317&text=%C2%A1Hola!%20%F0%9F%91%8B"><i class="fa-brands fa-whatsapp"></i></a>
     </div>
   </footer>
 
