--- a/index.html
+++ b/index.html
@@ -57,10 +57,6 @@
     </div>
   </section>
 
-  <!-- =================== SECCIÓN PROYECTOS =================== -->
-<section class="proyectos" id="proyectos">
-  <h2>Algunos de mis trabajos</h2>
-  <div class="projects-grid">
 
 <!-- =================== COSTOS – TEXTO =================== -->
 <section class="costos-nota" id="costos">
@@ -73,14 +69,14 @@
 
   <p class="price-line">
     <strong>Desde <span class="mxn">$1,800 MXN</span></strong>
-    <span class="usd">(~$100 USD aprox., estimado a 18 MXN/USD)</span>
+    <span class="usd">(~$100 USD aprox., estimado a 18.00 MXN/USD)</span>
   </p>
 
   <!-- Línea decorativa de dominio -->
   <div class="domain-line" aria-live="polite">
     <span class="domain-left">Tu sitio con el dominio que prefieras:</span>
     <span class="domain-demo"><span class="dname">miproyecto</span><span class="dtld">.com</span></span>
-    <span class="domain-badge">(Primer año gratuito)</span>
+    <span class="domain-badge">Primer año sin costo</span>
   </div>
 </section>
 
@@ -93,6 +89,10 @@
   </p>
 </section>
 
+  <!-- =================== SECCIÓN PROYECTOS =================== -->
+<section class="proyectos" id="proyectos">
+  <h2>Algunos de mis trabajos</h2>
+  <div class="projects-grid">
 
     <!-- Proyecto con video -->
 <div class="project">
