--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 
   <!-- =================== FOOTER =================== -->
   <footer class="footer">
-    <p>Contacto</p>
+    <p>Mis redes</p>
     <div class="socials">
       <a href="https://www.instagram.com/eutxnsy/"><i class="fa-brands fa-instagram"></i></a>
       <a href="https://api.whatsapp.com/send?phone=5217555573317&text=%C2%A1Hola!%20%F0%9F%91%8B"><i class="fa-brands fa-whatsapp"></i></a>
