--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
   </header>
 
   <!-- =================== SECCIÓN INFORMACIÓN =================== -->
-  <section class="info" id="info">
+<section class="info" id="info">
+  <div class="info-container">
     <h2>¿Por qué es importante una página web para mi negocio?</h2>
     <div class="info-grid">
       <div class="card">
@@ -55,8 +56,8 @@
         <p>Con estrategias digitales adecuadas, una web puede convertirse en tu mejor vendedor.</p>
       </div>
     </div>
-  </section>
-
+  </div>
+</section>
 
 <!-- =================== COSTOS – TEXTO =================== -->
 <section class="costos-nota" id="costos">
